--- a/pom.xml
+++ b/pom.xml
@@ -60,9 +60,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>4.9.3</version>
+            <groupId>net.insprill</groupId>
+            <artifactId>fetch4j</artifactId>
+            <version>1.3.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
