--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,7 +5,7 @@ api-version: 1.18
 depend:
   - PlaceholderAPI
 libraries:
-  - com.squareup.okhttp3:okhttp:4.9.3
+  - net.insprill:fetch4j:1.3.0
   - com.github.ben-manes.caffeine:caffeine:3.0.5
 
 commands:
